<resources>
    <string name="app_name">Internship</string>
    <string name="title_activity_about_me">AboutMe</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_info">Info</string>
    <string name="username">Username</string>
    <string name="about_me">About Me</string>
    <string name="academics">Academics</string>
    <string name="contact_me">Contact Me</string>
    <string name="nila_apps_internship_2023">Nila Apps Internship 2023</string>
    <string name="naan_mudhalvan_id">Naan Mudhalvan Id</string>
    <string name="date_of_birth">Date of Birth</string>
</resources>