<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Info">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/template" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/imageView"
            android:hint="@string/username"
            android:layout_marginBottom="8dp"
            android:textAlignment="center"
            android:textStyle="italic|bold"
            android:textColor="#0B7AD3"
            android:textSize="24sp" />
    </RelativeLayout>


    <TextView
        android:id="@+id/about_me"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="24sp"
        android:text="@string/about_me"
        android:textColor="#0B7AD3"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="24sp"
        android:textColor="#0B7AD3"
        android:text="@string/academics"
        android:textAlignment="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:textSize="24sp"
        android:textColor="#0B7AD3"
        android:text="@string/contact_me"
        android:textAlignment="center" />

    <View
        android:layout_width="300dp"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:background="#000000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/nila_apps_internship_2023"
        android:textAlignment="center" />
</LinearLayout>